sumo/tests/dfrouter/errors/network/edge/lane/testsuite.dfrouter
root__edge__lane#id__empty11
root__edge__lane#id__empty12
root__edge__lane#id__empty21
root__edge__lane#id__empty22
root__edge__lane#id__ungiven11
root__edge__lane#id__ungiven12
root__edge__lane#id__ungiven21
root__edge__lane#id__ungiven22

root__edge__lane#length__empty11
root__edge__lane#length__empty12
root__edge__lane#length__empty21
root__edge__lane#length__empty22
root__edge__lane#length__ungiven11
root__edge__lane#length__ungiven12
root__edge__lane#length__ungiven21
root__edge__lane#length__ungiven22
root__edge__lane#length__false11
root__edge__lane#length__false12
root__edge__lane#length__false21
root__edge__lane#length__false22

root__edge__lane#maxspeed__empty11
root__edge__lane#maxspeed__empty12
root__edge__lane#maxspeed__empty21
root__edge__lane#maxspeed__empty22
root__edge__lane#maxspeed__ungiven11
root__edge__lane#maxspeed__ungiven12
root__edge__lane#maxspeed__ungiven21
root__edge__lane#maxspeed__ungiven22
root__edge__lane#maxspeed__false11
root__edge__lane#maxspeed__false12
root__edge__lane#maxspeed__false21
root__edge__lane#maxspeed__false22


root__edge__lane__false










